# starlette-fancy

./: .gitignore  README.md  setup.cfg
starlette_fancy/: utils.py
starlette_fancy/endpoints/: __init__.py  crud.py
starlette_fancy/mixins/: crud.py
starlette_fancy/processors/: __init__.py  databases.py
starlette_fancy/validators/: __init__.py  pydantic.py
