[metadata]
name = starlette-fancy
version = attr: starlette_fancy.__version__
url = https://github.com/xtarlette/starlette-fancy
author = Xurvan
author_email = xojtaba@gmail.com
description = Fancy toolkit for Starlette
long_description = file: README.md
license = Apache License 2.0
license_files = LICENSE
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
project_urls =
    Source = https://github.com/xtarlette/starlette-fancy
    Tracker = https://github.com/xtarlette/starlette-fancy/issues

[options]
python_requires = >=3.8
packages = find:
zip_safe = false
install_requires =
    starlette >= 0.17

[options.extras_require]
pydantic =
    pydantic
databases =
    databases
marshal =
    starlette-marshal
full =
    pydantic
    databases
    starlette-marshal
    python-rapidjson
